# faster

./: .gitignore  Cargo.toml  README.md  test1.json  test2.json
src/: input_fast.rs  input_inet.rs  input_json.rs  main.rs  model.rs  output_inet.rs
src/input/: fast.rs  inet.rs  json.rs  mod.rs
