[package]
name = "faster"
version = "0.1.0"
edition = "2021"

# 性能测试请启用如下编译选项 

# [profile.release]
# codegen-units = 1
# lto = "fat"
# panic = "abort"
# strip = "symbols"
# [build]
# rustflags = ["-C", "target-cpu=native"]

[dependencies]
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ustr = { version = "1.1", features = ["serde"] }
derive_deref = "1.1"
smallvec = { version = "1.13.2", features = ["serde"] }
fxhash = "0.2"
json5 = "0.4"
rayon = "1.10"
regex = "1.11"
indexmap = "2.7"
dashmap = "6.1"